# houdini-connector

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  SECURITY.md  build_linux.sh  build_win64.bat  cmake_linux_build.sh  generate_projects.bat  get_dependencies.bat  get_dependencies.sh  houdini_launcher.bat  houdini_launcher.sh  hython_launcher.bat  install.bat  install.sh  package.toml  parse_args.bat  parse_args.sh  rebuild_linux.sh  rebuild_win64.bat  repo.toml  run_tests.bat  run_tests.sh  run_tests_he.bat  run_tests_pytest.bat  run_tests_pytest.sh
FS_Omni/: CMakeLists.txt  FS_Omni.cpp  FS_Omni.h  FS_OmniInfoHelper.cpp  FS_OmniInfoHelper.h  FS_OmniReadHelper.cpp  FS_OmniReadHelper.h  FS_OmniWriteHelper.cpp  FS_OmniWriteHelper.h
HoudiniOmni/: CMakeLists.txt  HoudiniOmni.cpp  HoudiniOmni.h  HoudiniOmniResultTypes.h  HoudiniOmniTypes.h  HoudiniOmniUtils.h  HoudiniOmniVersion.h
HoudiniOmniPy/: CMakeLists.txt  HoudiniOmniPy.cpp
OP_Omni/: CMD_Omni.cpp  CMakeLists.txt  LOP_OmniLiveSync.cpp  LOP_OmniLiveSync.h
Tests/: CMakeLists.txt
Tests/connector_tests/: check_env.py  check_omni_plugin.py  check_resolver_type.py  init_resolvers.py  list_usd_plugins_status.py  quit.py  set_preferred_resolver.py
Tests/houdini_engine_test/: CMakeLists.txt  houdini_engine_test.cpp
Tests/pytests/: test_client.py
Tests/test_he_export_usd/: CMakeLists.txt  test_he_export_usd.cpp
Tests/test_he_load_usd/: CMakeLists.txt  test_he_load_usd.cpp
Third-Party_Licenses/: carbonite-LICENSES.txt  cmake.txt  omni.asset_validator-LICENSE.txt  omniverse client library-LICENSES.txt
Third-Party_Licenses/carbonite-LICENSES/: Tracy-LICENSE.txt  carb_sdk-LICENSE.txt  carbonite-LICENSE.txt  drivepdk-LICENSE.txt  forgeaudio-LICENSE.md  nvtx-LICENSE.txt  pybind11-LICENSE.txt  python-LICENSES.txt  vulkansdk-LICENSE.md  zlib-LICENSE.txt
Third-Party_Licenses/omniverse client library-LICENSES/: Omniverse Client Library-LICENSE.txt  PIP-packages-LICENSES.txt  carbonite-LICENSES.txt  omni-config-cpp-LICENSE.txt  omni_hub.windows-x86_64-LICENSE.md  omnitrace-LICENSE.txt  omniverse_connection-LICENSES.txt  packages.json  python-LICENSES.txt
Third-Party_Licenses/python-LICENSES/: libffi-LICENSE.txt  python-000-mersenne-twister-LICENSE.txt  python-010-socket-LICENSE.txt  python-020-asyncsock-LICENSE.txt  python-030-httpcookies-LICENSE.txt  python-040-tracing-LICENSE.txt  python-050-uu-LICENSE.txt  python-060-xmlrpc-LICENSE.txt  python-070-select-LICENSE.txt  python-080-siphash-LICENSE.txt  python-090-strtod-LICENSE.txt  python-130-cfuhash-LICENSE.txt
assets/: MainMenuCommon.xml  PARMmenu.xml
assets/docs/: mdl_material_workflow.md
assets/help/nodes/lop/: omni_scale_light_intensities.txt  omni_set_legacy_light_properties.txt  omni_usd_rop.txt
assets/help/nodes/other/: omni_copy_files.txt  omni_save.txt
assets/husdplugins/outputprocessors/: omnicheckpoints.py  omnimdlproperties.py  omnisimplerelativepaths.py  omnistat.py  omnitextureexport.py  omniusdformat.py  omniverseurl.py
assets/husdplugins/shadertranslators/: mdl.py
assets/otls/: mdl_omniglass_vop.hda  mdl_omnihair_vop.hda  mdl_omnipbr_vop.hda  mdl_omnipbrclearcoat_vop.hda  mdl_omnisurface_vop.hda  mdl_omnisurfacelite_vop.hda  mdl_omnivolumedensity_vop.hda  object_omni_examplePowerlines.hda  object_omni_hdaConverter.hda  omni_conform.hda  omni_editlights.hda  omni_editmdl.hda  omni_file.hda  omni_lights.hda  omni_liveeditbreak.hda  omni_loader.hda  omni_loadlayer.hda  omni_usd_rop.hda  omni_validator.hda  sop_building_generator.hda  sop_omni_frustum.hda
assets/presets/Driver/: usd.idx
assets/presets/Lop/: copyproperty.idx  editproperties.idx  usd_rop.idx
assets/presets/Vop/: mdlomnihair.idx  mdlomnisurface.idx  mdlomnisurface_lite.idx
assets/python_panels/: AssetValidator.pypanel  Omniverse.pypanel
assets/scripts/: afterscenesave.py  menu_omni_connect.py  menu_omni_panel.py
assets/test-data/: omni_test_export_usd.hda  omni_test_load_usd.hda
assets/test-data/houdini-engine/: he_test_omni_load.hda  he_test_omni_save.hda
assets/toolbar/: omni.shelf
assets19.0/otls/: object_omni_examplePowerlines.hda  omni_editmdl.hda  omni_lights.hda  omni_validator.hda
assets19.0/presets/Driver/: usd.idx
assets19.0/presets/Lop/: usd_rop.idx
assets19.5/otls/: object_omni_examplePowerlines.hda  omni_editmdl.hda
assets19.5/presets/Driver/: usd.idx
assets19.5/presets/Lop/: usd_rop.idx
docs/: development_history.md  mdl_material_workflow.md  overview.md
docs/systems/: build.md  connector.md  debugging.md  deployment.md  resolver.md  testing.md
houdini-help/: command.help
package/: omniverse.json
python/python_libs/: pythonrc.py
python/python_libs/homni/: __init__.py  logging.py  utils.py
python/python_libs/homni/ui/: dialogs.py  panels.py
tools/: package.bat  package.sh
tools/repoman/: repoman.py
